--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 <div class="footer-info-single">
   <h2 class="title">Customer information</h2>
   <ul class="list-unstyled">
-    <li><a href="www.linkedin.com/in/ayush-gadhave-0604bb27a" title=""><i class="fa fa-angle-double-right"></i> About Us</a></li>
+    <li><a href="https://ayush1316.github.io/myportfolio/." title=""><i class="fa fa-angle-double-right"></i> About Us</a></li>
     <li><a href="http://www.nextbootstrap.com/" title=""><i class="fa fa-angle-double-right"></i> FAQ's</a></li>
     <li><a href="http://www.nextbootstrap.com/" title=""><i class="fa fa-angle-double-right"></i> Sell Your Items</a></li>
     <li><a href="http://www.nextbootstrap.com/" title=""><i class="fa fa-angle-double-right"></i> Contact Us</a></li>
