--- a/index.html
+++ b/index.html
@@ -218,32 +218,32 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-4 text-white">
-          <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/pip/cars/azera-gn7-2023/azera-gn7-2023-quater-view.png" alt="" class="img-responsive">
+          <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/pip/cars/azera-gn7-2023/azera-gn7-2023-quater-view.png" alt="" class="img-fluid">
           <div class="footer text-center"><a href="" class="text-white">The all-new AZERA</a></div>
           
       </div>
       <div class="col-4 text-white">
-        <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/all-vehicles/the-new-sonata-dn8-2023-quater-view.png" alt="" class="img-responsive">
+        <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/all-vehicles/the-new-sonata-dn8-2023-quater-view.png" alt="" class="img-fluid">
           <div class="footer text-center" ><a href="" class="text-white"><p>The all SONATA</p></a></div>
       </div>
       <div class="col-4 text-white">
-        <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/all-vehicles/veloster-js-quarter-view-ignite-flame-pc.png" alt="" class="img-responsive">
+        <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/all-vehicles/veloster-js-quarter-view-ignite-flame-pc.png" alt="" class="img-fluid">
           <div class="footer text-center"><a href="" class="text-white">VELOSTER</a></div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-4 text-white">
-          <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/all-vehicles/accent-hc-quarter-view-silk-silver-pc.png" alt="" class="img-responsive">
+          <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/all-vehicles/accent-hc-quarter-view-silk-silver-pc.png" alt="" class="img-fluid">
           <div class="footer text-center"><p>ACCENT</p></div>
           
       </div>
       <div class="col-4 text-white">
-        <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/all-vehicles/elantra-cn7-quater-view-intense-blue.png" alt="" class="img-responsive">
+        <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/all-vehicles/elantra-cn7-quater-view-intense-blue.png" alt="" class="img-fluid">
           <div class="footer text-center" ><p>ELANTRA</p></div>
       </div>
       <div class="col-4 text-white">
-        <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/all-vehicles/i20-bc3-i20-quater-view.png" alt="" class="img-responsive">
+        <img src="https://www.hyundai.com/content/dam/hyundai/ww/en/images/find-a-car/all-vehicles/i20-bc3-i20-quater-view.png" alt="" class="img-fluid">
           <div class="footer text-center"><p>i20</p></div>
       </div>
     </div>
